create github pages

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -582,8 +583,7 @@
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2">
                     CONTACT US</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5">
-                    Easily add subscribe and contact forms without any server-side integration.
-                </h3>
+                    We do our best to respond to all requests within 24 hours.&nbsp; For faster support please call (559) 376-2121</h3>
             </div>
         </div>
     </div>
@@ -591,7 +591,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="g-recaptcha-response" data-form-captcha="true" value="6LfEq7UoAAAAAGMXo1feiUJTwSQI2bOS4_3RDA9v"><input type="hidden" name="email" data-form-email="true" value="BaMET02SUkI9i6kbQfKXE7P/6YgOmTi/AFwY5yBVMd84dk/CclQX+WqMgTpZJhCCPDARp4xVz/tjgqBZeNOuJgAwuUS/MyEMmbPCqeQOhMMnTNUG0/5a9GlIJfLnA9UU.QuuBKeO2aDMqynwcqmW2gEeUv4QwRi/Zm1pP63KoNuBfqpAK3s0s0u06UBAhYglVgd4b54ynyzpy8ibp6GCgmXk9kxARaP4FpaMWW6xDYbB2KfFqhr8F7vCPlJBrwJ3b.yNDPnJIoWsXRIRDutI2EkAfLsehmCNdCGW0Kczq95VmNV9xK6OB4U+j+KL6zJ4OFnEOBYM2b4EfA1hD29X0hDWAjeHgJg1253KQZdVrH1NtE/eNip5s8F/XrCSOK2/bO">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="g-recaptcha-response" data-form-captcha="true" value="6LfEq7UoAAAAAGMXo1feiUJTwSQI2bOS4_3RDA9v"><input type="hidden" name="email" data-form-email="true" value="OKvrqBHcEe0yhgXW8WY5VC7//3sPaF029lCbB+qCBW01usS+qYywmv/Xfy9WX+TAw+ANyBEw8nvezaW65aSwZDbOdVCUzgLSZvx+leovas2jx9mRggjXJy4lSi6vZcTa.iJwql9LFWEdaDnCB2WgByiwuIt6tO0aA2FbUQyTr2AHA05wWoSA0Skgyvt2ypEnBPBUUeF6VZTaPkeYR9dOqGcFC1AWL6vD5XMkGvO0aH55SebycqbX9R4k5TX1voICG.zs207Ctj9nhtrqEcGYM+1wCpaVzbBKjSkPxlrEfybsti/IMWCwITzk4d2PWq60P6PCmLwLqW4IjjC04TdeEQLh2wf9WdbHLKaH5Gw1o8Rl82UuZMSQW5pYBImPiZdqSx">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -613,7 +613,9 @@
 <label for="message-form1-1i" class="form-control-label mbr-fonts-style display-7">Message</label>
 <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-1i"></textarea>
 </div>
-<div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-form btn-secondary display-4">SUBMIT</button></div>
+<div class="col-md-12 input-group-btn align-center">
+<button type="submit" class="btn btn-form btn-secondary display-4">SUBMIT</button>
+</div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
@@ -672,7 +674,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/1417962" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Maker</a></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/mbr-tabs/mbr-tabs.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/mbr-popup-btns/mbr-popup-btns.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="https://www.google.com/recaptcha/api.js?render=6LfEq7UoAAAAAGMXo1feiUJTwSQI2bOS4_3RDA9v"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/1417962" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/mbr-tabs/mbr-tabs.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/mbr-popup-btns/mbr-popup-btns.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="https://www.google.com/recaptcha/api.js?render=6LfEq7UoAAAAAGMXo1feiUJTwSQI2bOS4_3RDA9v"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
